fix: password visible/hide toggle button

--- a/src/app/(auth)/login/page.module.scss
+++ b/src/app/(auth)/login/page.module.scss
@@ -70,6 +70,13 @@
         color: #ffff;
       }
     }
+    .signUp {
+      text-align: center;
+      a {
+        text-decoration: underline;
+        color: rgb(0, 60, 255);
+      }
+    }
   }
 }
 @media (min-width: 600px) {
